crates/pardosa-schema/tests/compile_fail/evt_002.rs
use pardosa_schema::GenomeSafe;
use serde::Serialize;
use std::collections::HashMap;
#[derive(Serialize, GenomeSafe)]
struct BadStruct {
    map: HashMap<u32, u32>,
}
fn main() {}
